# CG

./: .gitignore
AtividadeWindowViewport/: AtividadeWindowViewport.js
Delaunay_Voronoi_CG/: CMakeLists.txt  delaunay_voronoi.cg.cpp  delaunay_voronoi.cg.ui
DesenhoInterativo/: Botao.js  HTML5 Canvas.html  canvas.js  convexhullfb.js  estilo.css  formas.js  objeto.js  quickhull.js
OpenGLCubo/: OpenGLCubo.sln
OpenGLCubo/Debug/: OpenGLCubo.ilk
OpenGLCubo/OpenGLCubo/: OpenGLCubo.vcxproj  OpenGLCubo.vcxproj.filters  fshader31.glsl  main.cpp  vshader31.glsl
OpenGLCubo/OpenGLCubo/Debug/: vc142.idb
OpenGLModeloTextura/: OpenGLModeloTextura.sln
OpenGLModeloTextura/Debug/: OpenGLModeloTextura.ilk
OpenGLModeloTextura/OpenGLModeloTextura/: Mesh.h  Model.h  OpenGLModeloTextura.cpp  OpenGLModeloTextura.vcxproj  OpenGLModeloTextura.vcxproj.filters  fshader31.glsl  glad.c  resource.h
OpenGLModeloTextura/OpenGLModeloTextura/Debug/: vc142.idb
OpenGLModeloTextura/OpenGLModeloTextura/King George V/: King_George_V.mtl  King_George_V.psd
OpenGLModeloTextura/opengl/lib/: assimp-vc142-mtd.exp
RayTracer/: RayTracer.sln
RayTracer/RayTracer/: RayTracer.cpp  RayTracer.vcxproj  out.ppm
RayTracer2/: RayTracer2.sln
RayTracer2/RayTracer2/: RayTracer2.cpp  RayTracer2.vcxproj  RayTracer2.vcxproj.filters  out.ppm
WindowsProject1/: WindowsProject1.sln
WindowsProject1/Debug/: WindowsProject1.ilk
WindowsProject1/WindowsProject1/: WindowsProject1.vcxproj
WindowsProject1/WindowsProject1/Debug/: vc142.idb
teste/: main.cpp  teste.depend  teste.layout
(+27 files in other folders)
